--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>[Name] [Surname] - Recruitment task</title>
+    <link rel="stylesheet" href="src/css/main.css">
+    <title> Krystian Sołtys - Recruitment task </title>
 </head>
 <body>
-
+    <main class="main-container">
+        <section class="image-container">
+            <img src="images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_480.jpg" alt="beach, sunset">
+        </section>
+        <section class="info-container">
+            <h2 class="info-container-title"> Lorem Ipsum </h2>
+            <p>
+                Infinitely scalable, feature-rich and cloud-native data management and protection
+                for modern and legacy infrastructures and SaaS platforms,
+                managed via a single app with no hardware required.
+            </p>
+            <button class="info-container-button"> Button </button>
+        </section>
+        <dialog id="modal">
+            <h2>Alert!</h2>
+        </dialog>
+    </main>
+    <script src="src/js/main.js"></script>
 </body>
