--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </section>
         <dialog id="modal">
             <h2>Alert!</h2>
+            <button class="close-modal-btn"></button>
         </dialog>
     </main>
     <script src="src/js/main.js"></script>
