--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
             <button class="info-container-button"> Button </button>
         </section>
         <dialog id="modal">
-            <h2>Alert!</h2>
-            <button class="close-modal-btn"></button>
+            <div class="dialog-box">
+                <h2>Alert!</h2>
+                <p class="click-counter-info"></p>
+                <div class="close-modal-btn"></div>
+            </div>
         </dialog>
     </main>
     <script src="src/js/main.js"></script>
