--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <div class="dialog-box">
                 <h2>Alert!</h2>
                 <p class="click-counter-info"></p>
-                <div class="close-modal-btn"></div>
+                <button class="clear-button invisible">Clear</button>
+                <div class="close-modal"></div>
             </div>
         </dialog>
     </main>
